2011-12-12  Eric Botcazou  <ebotcazou@adacore.com>

	PR tree-optimization/50569
	* tree-sra.c (build_ref_for_model): Replicate a chain of COMPONENT_REFs
	in the expression of MODEL instead of just the last one.

2011-12-12  Dmitry Vyukov  <dvyukov@google.com>

	* cgraphunit.c (init_lowered_empty_function): Fix flags for new edges.

2011-12-12  Jakub Jelinek  <jakub@redhat.com>

	PR middle-end/51510
	* calls.c (internal_arg_pointer_based_exp_scan): Don't use
	VEC_safe_grow_cleared if idx is smaller than VEC_length.

2011-12-12  Richard Sandiford  <richard.sandiford@linaro.org>

	PR middle-end/50873
	* optabs.c (maybe_legitimize_operand_same_code): Use copy_to_mode_reg
	instead of force_reg.  Do nothing if the address is already a
	non-virtual pseudo register.

2011-12-12  Torvald Riegel  <triegel@redhat.com>

	* gimplify.c (voidify_wrapper_expr): Add default handling for
	outermost wrapper.

2011-12-12  Torvald Riegel  <triegel@redhat.com>

	* tree-ssa-tail-merge.c (gimple_equal_p): Don't treat transaction
	commits as equal.

2011-12-12  Iain Sandoe  <iains@gcc.gnu.org>

	* config/darwin-sections.def (zobj_const_data_section): Fix over-
	length section name.

2011-12-11  Richard Henderson  <rth@redhat.com>

	* config/rs6000/rs6000.c (rs6000_expand_interleave): Use
	BYTES_BIG_ENDIAN, not TARGET_BIG_ENDIAN.

2011-12-11  Jakub Jelinek  <jakub@redhat.com>

	PR tree-optimization/51485
	* tree-vect-data-refs.c (vect_analyze_data_refs): Give up on
	DRs in call stmts.

2011-12-11  Patrick Marlier  <patrick.marlier@gmail.com>

	* trans-mem.c (ipa_tm_transform_calls_redirect): Do not remove
	edge.

2011-12-10  Richard Henderson  <rth@redhat.com>

	* config/rs6000/altivec.md (altivec_vmrghb): Rewrite pattern as
	vec_select + vec_concat.
	(altivec_vmrghh, altivec_vmrghw, altivec_vmrghsf, altivec_vmrglb,
	altivec_vmrglh, altivec_vmrglw, altivec_vmrglsf): Likewise.
	(vec_perm_constv16qi): New.
	(vec_extract_evenv4si, vec_extract_evenv4sf, vpkuhum_nomode,